--- a/FWS_server/CMakeLists.txt
+++ b/FWS_server/CMakeLists.txt
@@ -11,6 +11,6 @@ set(CMAKE_AUTOUIC ON)
 
 find_package(Qt5 COMPONENTS Core Sql REQUIRED PATHS "${CMAKE_PREFIX_PATH}/lib/cmake/Qt5" NO_DEFAULT_PATH)
 
-add_executable(FWS_server main.cpp)
+add_executable(FWS_server src/main.cpp)
 
 target_link_libraries(FWS_server Qt5::Core Qt5::Sql)
