--- a/FWS_client/CMakeLists.txt
+++ b/FWS_client/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
@@ -24,8 +24,8 @@ add_executable(FWS_client
   loginwindow.h
   loginwindow.ui
 
-  filesmodel.cpp
-  filesmodel.h
+#  filesmodel.cpp
+#  filesmodel.h
 
   filescontroller.cpp
   filescontroller.h
