--- a/FWS_server/CMakeLists.txt
+++ b/FWS_server/CMakeLists.txt
@@ -12,6 +12,9 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./build)#../build-FWS_server-Desktop-Debug)
 #set(CMAKE_PREFIX_PATH /media/SharedFiles/ProgramFiles/Qt/5.15.0/gcc_64)
 
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+
 # Libraries
 find_package(Qt5 COMPONENTS Core Sql REQUIRED PATHS "${CMAKE_PREFIX_PATH}/lib/cmake/Qt5" NO_DEFAULT_PATH)
 include_directories(${CMAKE_PREFIX_PATH}/lib/cmake/Qt5Sql)
@@ -19,10 +22,13 @@ include_directories(${CMAKE_PREFIX_PATH}/lib/cmake/Qt5Sql)
 FIND_PACKAGE( Boost 1.65 COMPONENTS program_options REQUIRED )
 INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
 
+#message("CMAKE PATH IS ${CMAKE_PREFIX_PATH}")
+
 # Source File Directory
 include_directories(./src)
 include_directories(./src/fpga)
 include_directories(./src/commands)
+include_directories(./include)
 
 # Linker Flags
 set(CMAKE_SHARED_LINKER_FLAGS "-lboost_system")
@@ -40,6 +46,10 @@ add_executable(FWS_server
   src/filesystemcontroller.hpp
   src/filesystemcontroller.cpp
 
+  #Server
+  src/serverhandler.hpp
+  src/serverhandler.cpp
+  
   #FPGA
   src/fpga/fpga.hpp
   src/fpga/fpga.cpp
@@ -61,5 +71,5 @@ add_executable(FWS_server
   src/commands/fpgaGenerateProgrammingFileCommand.cpp
   )
 
-target_include_directories(FWS_server PRIVATE ./src)
-target_link_libraries(FWS_server Qt5::Core Qt5::Sql boost_filesystem boost_system)
+target_link_libraries(FWS_server Qt5::Core Qt5::Sql boost_filesystem boost_system ${PROJECT_SOURCE_DIR}/lib/librpc.a "${CMAKE_THREAD_LIBS_INIT}")
+target_include_directories(FWS_server PRIVATE ./src ./include)
